Fix grid issue on screen < 480px
Flexbox is now only applied on screen larger than 480px instead of
using flex-direction to make sure the columns are shown in a column as
that causes some weird overlapping issues.

--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -78,18 +78,14 @@ main {
    ========================================================================== */
 
 .row {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-
     // The negative margin is even out by the padding on .col-
     margin-right: -($grid__gutter / 2);
     margin-left: -($grid__gutter / 2);
 
     @include breakpoint(screen-sm) {
-        flex-direction: row;
+        display: flex;
+        flex-wrap: wrap;
     }
-
 }
 
 ul.row {
